[package]
name = "fcm-futures3"
version = "0.2.0-alpha.1"
authors = ["Jasper Bryant-Greene <jbg@rf.net.nz>"]
description = "An API to talk to FCM (Firebase Cloud Messaging) in Rust"
license = "MIT"
repository = "https://github.com/jbg/fcm-rust"
keywords = ["fcm", "firebase", "cloud", "messaging", "tokio"]
edition = "2018"

[dependencies]
chrono = "0.4"
erased-serde = "0.3"
futures-preview = "0.3.0-alpha.19"
hyper = { version = "0.13.0-alpha.4", features = ["nightly", "unstable-stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-service = "0.1"

[dev-dependencies]
argparse = "0.2.1"
tokio = "0.2.0-alpha.6"
